# mcp_bootstrap

./: .gitignore  README.md  pyproject.toml  setup.sh
mcp_server/: build_mcp.py
mcp_server/functions/: add.py  product19.py  subtract.py
